<resources>
    <string name="app_name">Learnearn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">omyser.tk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="namehint">Email</string>
    <string name="name">Username</string>
    <string name="passhint">Password</string>
    <string name="siginin">Already SignUp!Login</string>
    <string name="signup">New User?SignUp!</string>
    <string name="Attempt">No of attempts remaining:</string>
</resources>
